--- a/LAB-3.ipynb
+++ b/LAB-3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNUMZhiAfS5AFp96HVUCQE",
+      "authorship_tag": "ABX9TyOyEQn0mN3CLuiv6evm5K9b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "uXU1yHxH3ONU"
       },
@@ -65,7 +65,7 @@
         "id": "yqnmhJye7bz7",
         "outputId": "bba38756-ac94-48a7-8095-59a28fca6a06"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "id": "Ywmqx1GA8nw3",
         "outputId": "869a0fd2-274d-43e1-a472-a1f340806e85"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "id": "DldMz68--tQz",
         "outputId": "8d1a6633-8679-42bc-bedd-b388a1ac7c96"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "Y_V852IQ_MkI"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
         "id": "m2D59K5zAL1D",
         "outputId": "b645ee8d-6646-4a19-8402-b3d5e1eb65d7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +220,7 @@
         "id": "sjW2F6CoBEh3",
         "outputId": "5ffe0a18-0ae1-4560-850a-8142b643fc05"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +263,7 @@
         "id": "68Puqt9pC13j",
         "outputId": "c7685165-ad3b-4ee0-83b0-28f1f2463ceb"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,7 +309,7 @@
         "id": "YBEhBLQNGbyX",
         "outputId": "712aa5ae-c328-44a4-d164-7579083682be"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +351,7 @@
         "id": "5hisoTTWIEP3",
         "outputId": "a35020d8-f91b-4b8b-caa5-c670b3ebaf62"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +399,7 @@
         "id": "Ejw5sbUPPp11",
         "outputId": "4f8e1866-39de-406d-824b-89454b352332"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +441,7 @@
         "id": "HghOZmMPRFq1",
         "outputId": "91dc2551-80cf-41cd-f956-8df580bf0beb"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,7 +481,7 @@
         "id": "a07q-IitSF4-",
         "outputId": "574fc9e8-70e4-4f30-d7cd-a77069fe95ea"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,7 +514,7 @@
         "id": "KlA2oH8dT6Rx",
         "outputId": "4a399c11-977a-4d61-ff99-85f675e0efe1"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +558,7 @@
         "id": "AlSnE4hjVUtd",
         "outputId": "879cbba3-f3b0-4a60-86e3-cdf2c5d24e56"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,12 +574,72 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "A = np.array([[1, -2, 3],\n",
+        "              [4, -5, 6],\n",
+        "              [7,  8, -9]])\n",
+        "\n",
+        "print(\" Original Array:\\n\", A)\n",
+        "A_squared = A ** 2\n",
+        "print(\"Squared Array:\\n\", A_squared)\n",
+        "\n",
+        "A_sqrt = np.sqrt(A_squared)\n",
+        "print(\"Square Root of Squared Array:\\n\", A_sqrt)\n",
+        "A_nonneg = np.where(A < 0, 0, A)\n",
+        "print(\"Negatives replaced with 0:\\n\", A_nonneg)\n",
+        "count_greater_5 = np.sum(A > 5)\n",
+        "print(\"Number of elements > 5:\", count_greater_5)\n",
+        "count_even = np.sum(A % 2 == 0)\n",
+        "print(\"Number of even elements:\", count_even)\n",
+        "mask = A > 3\n",
+        "print(\"Boolean Mask of elements > 3:\\n\", mask)\n",
+        "masked_result = np.where(mask, A, -1)\n",
+        "print(\"Masked Result (values > 3, else -1):\\n\", masked_result)\n"
+      ],
       "metadata": {
-        "id": "9WVbDXT9cup0"
+        "id": "9WVbDXT9cup0",
+        "outputId": "5e21cf02-49f7-41b8-84cb-d0e8546398d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Original Array:\n",
+            " [[ 1 -2  3]\n",
+            " [ 4 -5  6]\n",
+            " [ 7  8 -9]]\n",
+            "Squared Array:\n",
+            " [[ 1  4  9]\n",
+            " [16 25 36]\n",
+            " [49 64 81]]\n",
+            "Square Root of Squared Array:\n",
+            " [[1. 2. 3.]\n",
+            " [4. 5. 6.]\n",
+            " [7. 8. 9.]]\n",
+            "Negatives replaced with 0:\n",
+            " [[1 0 3]\n",
+            " [4 0 6]\n",
+            " [7 8 0]]\n",
+            "Number of elements > 5: 3\n",
+            "Number of even elements: 4\n",
+            "Boolean Mask of elements > 3:\n",
+            " [[False False False]\n",
+            " [ True False  True]\n",
+            " [ True  True False]]\n",
+            "Masked Result (values > 3, else -1):\n",
+            " [[-1 -1 -1]\n",
+            " [ 4 -1  6]\n",
+            " [ 7  8 -1]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
