--- a/LAB-04.ipynb
+++ b/LAB-04.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlGLXvTZ83Sgkg7KGjsk7b",
+      "authorship_tag": "ABX9TyOo0pz0f/GsOdGXhkmWflH4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,7 +77,7 @@
         "id": "28MPx4Oq8MoS",
         "outputId": "f2738d1a-a1c5-46df-da2e-9020bbaba6b9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
         "id": "py64Uq978xTn",
         "outputId": "2f446fef-4356-43f8-b5a0-f515622af5ed"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +136,7 @@
         "id": "CQoylUTW-oQg",
         "outputId": "794d4438-69a8-417a-ac88-333f79c81da8"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +163,7 @@
         "id": "s6FGpUN1-qs1",
         "outputId": "8c0f22e0-9bf2-4218-f4af-3f724e0a7c26"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +191,7 @@
         "id": "qSerpzwr_Cbe",
         "outputId": "2a28902e-91f1-4f02-aae7-39975cfd8949"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +223,7 @@
         "id": "LKuPZPxF_nzG",
         "outputId": "13f192d8-d5cc-404f-aac0-492816f9befa"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
         "id": "QsV52_hg__nm",
         "outputId": "6bfca192-e468-441d-ca1c-13fb7c047087"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +279,7 @@
         "id": "yUgXzbW2Ay8c",
         "outputId": "4f800faf-2d7a-450b-9d2b-8efda3623ed1"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +306,7 @@
         "id": "ZaazoR86BjeN",
         "outputId": "b398fc68-f184-41b8-c7e9-bf83418a8f9f"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +353,7 @@
         "id": "J9EMnxs3Cqs-",
         "outputId": "0a2fde79-9890-4e31-9b82-451ad501317f"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,6 +400,12 @@
         "\n",
         "df['Total'] = df[['M1','M2','M3']].sum(axis=1)\n",
         "df['Average'] = df[['M1','M2','M3']].mean(axis=1)\n",
+        "#df['Result'] = ['Pass' if x >= 40 else 'Fail' for x in df['Average']]\n",
+        "\n",
+        "df['Result'] = ['Pass' if (m1 >= 40 and m2 >= 40 and m3 >= 40) else 'Fail'\n",
+        "                for m1, m2, m3 in zip(df['M1'], df['M2'], df['M3'])]\n",
+        "\n",
+        "\n",
         "print(df)"
       ],
       "metadata": {
@@ -407,9 +413,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7egQ_WTGFJpc",
-        "outputId": "185fae23-3bd0-4df8-f100-e2cd1efcb032"
+        "outputId": "a767111c-acdc-42b8-f20f-2aac33a0a4ce"
       },
-      "execution_count": 48,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,11 +426,11 @@
             "1    ECE     1320  90  94  79\n",
             "2    CSE     1321  78  69  91\n",
             "3   AIML     1711  92  88  89\n",
-            "  S.Name S.Rollno  M1  M2  M3  Total    Average\n",
-            "0    CSE     1330  85  79  82    246  82.000000\n",
-            "1    ECE     1320  90  94  79    263  87.666667\n",
-            "2    CSE     1321  78  69  91    238  79.333333\n",
-            "3   AIML     1711  92  88  89    269  89.666667\n"
+            "  S.Name S.Rollno  M1  M2  M3  Total    Average Result\n",
+            "0    CSE     1330  85  79  82    246  82.000000   Pass\n",
+            "1    ECE     1320  90  94  79    263  87.666667   Pass\n",
+            "2    CSE     1321  78  69  91    238  79.333333   Pass\n",
+            "3   AIML     1711  92  88  89    269  89.666667   Pass\n"
           ]
         }
       ]
